--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 body { font-family: Arial, sans-serif; background:#f6f7f8; margin:0; }
 .container { max-width:720px; margin:auto; padding:20px; background:white; min-height:100vh; }
 h1,h2,h3 { font-weight:600; margin-top:25px; }
-.section { border-top:1px solid #ddd; padding-top:15px; margin-top:20px; }
 .btn { display:block; width:100%; padding:14px; margin:10px 0; font-size:16px; border-radius:6px; border:none; background:#007BFF; color:white; cursor:pointer; }
 .btn.secondary { background:#6c757d; }
 .progress { height:6px; background:#ddd; margin:15px 0; }
 .progress-bar { height:6px; width:0%; background:#4caf50; }
 .footer { font-size:12px; color:#666; margin-top:40px; }
-.answer { margin-left:10px; margin-top:4px; }
-.rgpd { font-size:12px; color:#555; margin-top:8px; }
-label { display:block; margin-top:8px; }
-input[type=number], input[type=range] { width:100%; padding:8px; font-size:16px; }
+input { width:100%; padding:10px; font-size:16px; margin-top:8px; }
+label { font-weight:600; display:block; margin-top:10px; }
 </style>
 </head>
 
@@ -61,11 +58,11 @@ render(`
 <p>Questionnaire destiné à préparer votre consultation médicale.<br>
 Aucune donnée n’est enregistrée.</p>
 
-<div class="rgpd">
+<p style="font-size:12px">
 <a href="https://abbe-web.github.io/Questionnaire-AutoEvaluation-AP/politique-confidentialite.html" target="_blank">
 Politique de confidentialité
 </a>
-</div>
+</p>
 
 <button class="btn" onclick="start('gpaq')">Questionnaire détaillé (GPAQ)</button>
 <button class="btn secondary" onclick="start('marshall')">Questionnaire court (Marshall)</button>
@@ -86,9 +83,9 @@ function start(tool){
 function marshallQ1(){
 render(`
 <h2>Marshall – Question 1</h2>
-<p>≥ 20 min d’activité intense (transpiration, essoufflement)</p>
-<button class="btn" onclick="state.marshall.q1=4; marshallQ2()">≥ 3 fois / semaine</button>
-<button class="btn" onclick="state.marshall.q1=2; marshallQ2()">1–2 fois / semaine</button>
+<p>Combien de fois par semaine faites-vous au moins 20 minutes d’activité intense ?</p>
+<button class="btn" onclick="state.marshall.q1=4; marshallQ2()">≥ 3 fois</button>
+<button class="btn" onclick="state.marshall.q1=2; marshallQ2()">1–2 fois</button>
 <button class="btn" onclick="state.marshall.q1=0; marshallQ2()">Jamais</button>
 <button class="btn secondary" onclick="back()">Retour</button>
 `,15);
@@ -97,10 +94,10 @@ render(`
 function marshallQ2(){
 render(`
 <h2>Marshall – Question 2</h2>
-<p>≥ 30 min d’activité modérée ou marche rapide</p>
-<button class="btn" onclick="finishMarshall(4)">≥ 5 fois / semaine</button>
-<button class="btn" onclick="finishMarshall(2)">3–4 fois / semaine</button>
-<button class="btn" onclick="finishMarshall(1)">1–2 fois / semaine</button>
+<p>Combien de fois par semaine faites-vous au moins 30 minutes d’activité modérée ou de marche rapide ?</p>
+<button class="btn" onclick="finishMarshall(4)">≥ 5 fois</button>
+<button class="btn" onclick="finishMarshall(2)">3–4 fois</button>
+<button class="btn" onclick="finishMarshall(1)">1–2 fois</button>
 <button class="btn" onclick="finishMarshall(0)">Jamais</button>
 <button class="btn secondary" onclick="back()">Retour</button>
 `,30);
@@ -115,7 +112,7 @@ function finishMarshall(q2){
 }
 
 /*************************************************
- * GPAQ — TEST heures + minutes (activité intense travail)
+ * GPAQ — TEXTE EXACT FOURNI
  *************************************************/
 function gpaqQ1(){
 render(`
@@ -130,128 +127,203 @@ render(`
 function gpaqQ2(){
 render(`
 <h2>Activité au travail – intense</h2>
-<p>Combien de jours par semaine faites-vous ces activités ?</p>
-<input type="number" min="0" max="7"
-onchange="state.gpaq.wi_d=this.value">
-<button class="btn" onclick="gpaqQ3()">Continuer</button>
+<label>Combien de jours par semaine faites-vous ces activités ?</label>
+<input type="number" min="0" max="7" onchange="state.gpaq.wi_d=this.value">
+<label>Combien d’heures et minutes par jour ?</label>
+<input type="number" placeholder="Heures" min="0" max="24" onchange="state.gpaq.wi_h=this.value">
+<input type="number" placeholder="Minutes" min="0" max="59" onchange="state.gpaq.wi_m=this.value">
+<button class="btn" onclick="gpaqQ4()">Continuer</button>
 <button class="btn secondary" onclick="back()">Retour</button>
 `,20);
 }
 
-/* 🔧 MODIFIÉ : heures + minutes */
-function gpaqQ3(){
+function gpaqQ4(){
 render(`
-<h2>Activité au travail – intense</h2>
-<p>Combien d’heures et minutes par jour ?</p>
-
-<label>Heures</label>
-<input type="number" min="0" max="24"
-onchange="state.gpaq.wi_h=this.value">
-
-<label>Minutes</label>
-<input type="number" min="0" max="59"
-onchange="state.gpaq.wi_m=this.value">
-
-<button class="btn" onclick="gpaqQ4()">Continuer</button>
+<h2>Activité modérée au travail</h2>
+<p>Votre travail implique-t-il des activités physiques modérées ?</p>
+<button class="btn" onclick="state.gpaq.wm=1; gpaqQ5()">Oui</button>
+<button class="btn" onclick="state.gpaq.wm=0; gpaqQ7()">Non</button>
 <button class="btn secondary" onclick="back()">Retour</button>
 `,30);
 }
 
-/*************************************************
- * SUITE GPAQ (inchangée)
- *************************************************/
-function gpaqQ4(){
+function gpaqQ5(){
 render(`
-<h2>Travail – activité modérée</h2>
-<p>Votre travail implique-t-il des activités physiques modérées ?</p>
-<button class="btn" onclick="state.gpaq.wm=1; finishGPAQ()">Oui</button>
-<button class="btn" onclick="state.gpaq.wm=0; finishGPAQ()">Non</button>
+<h2>Activité modérée au travail</h2>
+<label>Combien de jours par semaine faites-vous ces activités ?</label>
+<input type="number" min="0" max="7" onchange="state.gpaq.wm_d=this.value">
+<label>Combien d’heures et minutes par jour ?</label>
+<input type="number" placeholder="Heures" min="0" max="24" onchange="state.gpaq.wm_h=this.value">
+<input type="number" placeholder="Minutes" min="0" max="59" onchange="state.gpaq.wm_m=this.value">
+<button class="btn" onclick="gpaqQ7()">Continuer</button>
 <button class="btn secondary" onclick="back()">Retour</button>
 `,40);
 }
 
-/*************************************************
- * CALCUL GPAQ (corrigé pour heures + minutes)
- *************************************************/
-function finishGPAQ(){
-  const wi =
-    (state.gpaq.wi_d||0) *
-    (((state.gpaq.wi_h||0)*60) + (state.gpaq.wi_m||0));
-
-  const MET = wi * 8;
-  state.result.met = MET;
-
-  if(MET>=3000) state.result.niveau="très_actif";
-  else if(MET>=600) state.result.niveau="moyennement_actif";
-  else state.result.niveau="insuffisamment_actif";
-
-  motivation();
-}
-
-/*************************************************
- * MOTIVATION + EVA
- *************************************************/
-function motivation(){
-  if(state.result.niveau!=="insuffisamment_actif"){
-    render(`
-    <p>Êtes-vous actif à ce niveau depuis plus de 6 mois ?</p>
-    <button class="btn" onclick="state.result.stade='consolidation'; evaImp()">Oui</button>
-    <button class="btn" onclick="state.result.stade='action'; evaImp()">Non</button>
-    <button class="btn secondary" onclick="back()">Retour</button>
-    `,70);
-  } else {
-    render(`
-    <p>Envisagez-vous d’augmenter votre activité physique dans les 30 jours ?</p>
-    <button class="btn" onclick="state.result.stade='préparation'; evaImp()">Oui</button>
-    <button class="btn" onclick="state.result.stade='intention'; evaImp()">Non</button>
-    <button class="btn secondary" onclick="back()">Retour</button>
-    `,70);
-  }
-}
-
-function evaImp(){
+function gpaqQ7(){
 render(`
-<p>Quelle importance accordez-vous à l’activité physique (0–10) ?</p>
-<input type="range" min="0" max="10" value="5"
-oninput="this.nextElementSibling.innerText=this.value">
-<div>5</div>
-<button class="btn"
-onclick="state.result.importance=document.querySelector('input').value; evaConfiance()">
-Continuer</button>
+<h2>Déplacements</h2>
+<p>Effectuez-vous des trajets d’au moins 10 minutes à pied ou à vélo ?</p>
+<button class="btn" onclick="state.gpaq.tr=1; gpaqQ8()">Oui</button>
+<button class="btn" onclick="state.gpaq.tr=0; gpaqQ10()">Non</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,50);
+}
+
+function gpaqQ8(){
+render(`
+<h2>Déplacements</h2>
+<label>Combien de jours par semaine ?</label>
+<input type="number" min="0" max="7" onchange="state.gpaq.tr_d=this.value">
+<label>Combien de temps y consacrez-vous par jour ?</label>
+<input type="number" placeholder="Heures" min="0" max="24" onchange="state.gpaq.tr_h=this.value">
+<input type="number" placeholder="Minutes" min="0" max="59" onchange="state.gpaq.tr_m=this.value">
+<button class="btn" onclick="gpaqQ10()">Continuer</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,60);
+}
+
+function gpaqQ10(){
+render(`
+<h2>Activité de loisirs</h2>
+<p>Pratiquez-vous des sports ou du fitness de forte intensité ?</p>
+<button class="btn" onclick="state.gpaq.li=1; gpaqQ11()">Oui</button>
+<button class="btn" onclick="state.gpaq.li=0; gpaqQ13()">Non</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,70);
+}
+
+function gpaqQ11(){
+render(`
+<h2>Loisirs – activité intense</h2>
+<label>Combien de jours par semaine ?</label>
+<input type="number" min="0" max="7" onchange="state.gpaq.li_d=this.value">
+<label>Combien de temps y consacrez-vous par jour ?</label>
+<input type="number" placeholder="Heures" min="0" max="24" onchange="state.gpaq.li_h=this.value">
+<input type="number" placeholder="Minutes" min="0" max="59" onchange="state.gpaq.li_m=this.value">
+<button class="btn" onclick="gpaqQ13()">Continuer</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,80);
+}
+
+function gpaqQ13(){
+render(`
+<h2>Activité de loisirs</h2>
+<p>Pratiquez-vous des activités physiques modérées en loisirs ?</p>
+<button class="btn" onclick="state.gpaq.lm=1; gpaqQ14()">Oui</button>
+<button class="btn" onclick="state.gpaq.lm=0; gpaqQ16()">Non</button>
 <button class="btn secondary" onclick="back()">Retour</button>
 `,85);
 }
 
-/* ✅ BUG CORRIGÉ ICI */
-function evaConfiance(){
+function gpaqQ14(){
 render(`
-<p>Dans quelle mesure êtes-vous confiant pour maintenir ou augmenter votre activité physique (0–10) ?</p>
-<input type="range" min="0" max="10" value="5"
-oninput="this.nextElementSibling.innerText=this.value">
-<div>5</div>
-<button class="btn"
-onclick="state.result.confiance=document.querySelector('input').value; final()">
-Terminer</button>
+<h2>Loisirs – activité modérée</h2>
+<label>Combien de jours par semaine ?</label>
+<input type="number" min="0" max="7" onchange="state.gpaq.lm_d=this.value">
+<label>Combien de temps y consacrez-vous par jour ?</label>
+<input type="number" placeholder="Heures" min="0" max="24" onchange="state.gpaq.lm_h=this.value">
+<input type="number" placeholder="Minutes" min="0" max="59" onchange="state.gpaq.lm_m=this.value">
+<button class="btn" onclick="gpaqQ16()">Continuer</button>
 <button class="btn secondary" onclick="back()">Retour</button>
 `,90);
 }
 
+function gpaqQ16(){
+render(`
+<h2>Comportement sédentaire</h2>
+<p>Combien de temps passez-vous assis ou couché par jour (hors sommeil) ?</p>
+<input type="number" placeholder="Heures" min="0" max="24" onchange="state.gpaq.sed_h=this.value">
+<input type="number" placeholder="Minutes" min="0" max="59" onchange="state.gpaq.sed_m=this.value">
+<button class="btn" onclick="finishGPAQ()">Continuer</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,95);
+}
+
+function finishGPAQ(){
+  const toMin = (h,m)=> (h||0)*60+(m||0);
+  const MET =
+    toMin(state.gpaq.wi_h,state.gpaq.wi_m)*(state.gpaq.wi_d||0)*8 +
+    toMin(state.gpaq.li_h,state.gpaq.li_m)*(state.gpaq.li_d||0)*8 +
+    (
+      toMin(state.gpaq.wm_h,state.gpaq.wm_m)*(state.gpaq.wm_d||0) +
+      toMin(state.gpaq.tr_h,state.gpaq.tr_m)*(state.gpaq.tr_d||0) +
+      toMin(state.gpaq.lm_h,state.gpaq.lm_m)*(state.gpaq.lm_d||0)
+    )*4;
+
+  state.result.met=MET;
+  state.result.niveau=MET>=3000?"très_actif":MET>=600?"moyennement_actif":"insuffisamment_actif";
+  motivation();
+}
+
 /*************************************************
- * RÉSULTAT FINAL (simplifié pour test)
+ * STADE MOTIVATIONNEL (CORRIGÉ)
+ *************************************************/
+function motivation(){
+  if(state.result.niveau!=="insuffisamment_actif"){
+    render(`
+<p>Êtes-vous actif à ce niveau depuis plus de 6 mois ?</p>
+<button class="btn" onclick="state.result.stade='consolidation'; evaImportance()">Oui</button>
+<button class="btn" onclick="state.result.stade='action'; evaImportance()">Non</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,97);
+  } else {
+    render(`
+<p>Envisagez-vous d’augmenter votre activité physique dans les 30 jours ?</p>
+<button class="btn" onclick="state.result.stade='préparation'; evaImportance()">Oui</button>
+<button class="btn" onclick="motivation6mois()">Non</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,97);
+  }
+}
+
+function motivation6mois(){
+render(`
+<p>Avez-vous l’intention de vous engager dans une activité physique régulière dans les 6 mois ?</p>
+<button class="btn" onclick="state.result.stade='intention'; evaImportance()">Oui</button>
+<button class="btn" onclick="state.result.stade='indétermination'; evaImportance()">Non</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,98);
+}
+
+/*************************************************
+ * EVA
+ *************************************************/
+function evaImportance(){
+render(`
+<p>Quelle importance accordez-vous à l’activité physique dans votre vie, entre 0 (aucune importance) et 10 (très grande importance) ?</p>
+<input type="range" min="0" max="10" value="5" oninput="this.nextElementSibling.innerText=this.value">
+<div>5</div>
+<button class="btn" onclick="state.result.importance=document.querySelector('input').value; evaConfiance()">Continuer</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,99);
+}
+
+function evaConfiance(){
+render(`
+<p>Dans quelle mesure êtes-vous confiant(e) en vous pour réussir à augmenter, si besoin, votre niveau d’activité physique ?</p>
+<input type="range" min="0" max="10" value="5" oninput="this.nextElementSibling.innerText=this.value">
+<div>5</div>
+<button class="btn" onclick="state.result.confiance=document.querySelector('input').value; final()">Terminer</button>
+<button class="btn secondary" onclick="back()">Retour</button>
+`,100);
+}
+
+/*************************************************
+ * FIN ÉTAPE 2
  *************************************************/
 function final(){
 render(`
 <h2>Conclusion</h2>
-<p><strong>Niveau d’activité :</strong>
-${state.result.niveau.replace("_"," ")}
-${state.result.met?` (${state.result.met} MET-min/semaine)`:""}</p>
+<p><strong>Niveau d’activité :</strong> ${state.result.niveau.replace("_"," ")}
+${state.result.met?` (${Math.round(state.result.met)} MET-min/semaine)`:""}
+</p>
 
 <p><strong>Stade motivationnel :</strong> ${state.result.stade}</p>
 <p><strong>Importance :</strong> ${state.result.importance}/10</p>
 <p><strong>Confiance :</strong> ${state.result.confiance}/10</p>
 
 <button class="btn secondary" onclick="location.reload()">Recommencer</button>
-
 <p class="footer">Outil d’aide à la consultation médicale.</p>
 `,100,false);
 }
